Update build to latest & build err resolved

--- a/gamebuild/index.html
+++ b/gamebuild/index.html
@@ -134,30 +134,30 @@
   </section>
 
 
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-mobile-warning">
-        WebGL builds are not supported on mobile devices.
-      </div>
-      <div id="unity-footer">
-        <!-- <div id="unity-webgl-logo"></div> -->
-        <div id="unity-fullscreen-button"></div>
-        <!-- <div id="unity-build-title"></div> -->
+  <div id="unity-container" class="unity-desktop">
+    <canvas id="unity-canvas" width=960 height=600></canvas>
+    <div id="unity-loading-bar">
+      <div id="unity-logo"></div>
+      <div id="unity-progress-bar-empty">
+        <div id="unity-progress-bar-full"></div>
       </div>
     </div>
+    <div id="unity-mobile-warning">
+      WebGL builds are not supported on mobile devices.
+    </div>
+    <div id="unity-footer">
+      <!-- <div id="unity-webgl-logo"></div> -->
+      <div id="unity-fullscreen-button"></div>
+      <!-- <div id="unity-build-title">Sammanslaget22</div> -->
+    </div>
+  </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ourhome-build.loader.js";
+      var loaderUrl = buildUrl + "/our-home-build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ourhome-build.data.gz",
-        frameworkUrl: buildUrl + "/ourhome-build.framework.js.gz",
-        codeUrl: buildUrl + "/ourhome-build.wasm.gz",
+        dataUrl: buildUrl + "/our-home-build.data",
+        frameworkUrl: buildUrl + "/our-home-build.framework.js",
+        codeUrl: buildUrl + "/our-home-build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Sammanslaget22",
