Update 'about us' data & update build to latest version

--- a/gamebuild/index.html
+++ b/gamebuild/index.html
@@ -83,46 +83,48 @@
      <section id="om-oss" class="om-oss">
       <h2>Om oss</h2>
       <div class="small-card-container">
+        
         <div class="small-card-wrapper">
-            <img src="./WebAssets/images/felix.png" alt="Workbench">
-            <p> Felix Östergren </p>
-            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi tempore laboriosam velit ratione explicabo, eligendi iusto, accusantium nemo ea sit non porro officiis laborum in quo tenetur, officia iure repellendus? </p>
-            <p> *I am a disclaimer </p>
+          <img src="./WebAssets/images/jimmy.webp" alt="Jimmy">
+          <p> Jimmy Saarela, Game Programmer </p>
+          <p> Jag har tagit ansvar för implementeringen av interaktioner, kamera, samt uppbyggnad av 3D miljö. </p>
         </div>
 
         <div class="small-card-wrapper">
-            <img src="./WebAssets/images/felix.png" alt="empty">
-            <p>  Title here! </p>
-            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem distinctio, assumenda </p>
-            <!-- <p> *I am a disclaimer </p> -->
+            <img src="./WebAssets/images/felix.png" alt="Felix">
+            <p> Felix Östergren, Webbutvecklare </p>
+            <p> Ansvarat för webbsidan och dess design, deployment, och Unity WebGL builds. Hjälpt grundidén</p>
+            <p> <a href = "mailto: hello@felixgren.com">hello@felixgren.com</a> </p>
         </div>
 
         <div class="small-card-wrapper">
-            <img src="./WebAssets/images/felix.png" alt="empty">
-            <p>  Title here! </p>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae in ducimus optio repellendus nihil sint maxime ipsum praesentium soluta. </p>
+            <img src="./WebAssets/images/saga.webp" alt="Saga">
+            <p> Saga Runsten, Manusförfattare </p>
+            <p> Deltagit i skapandet och bearbetandet av berättelsens storyline och narrativ. </p>
+            <p> <a href = "mailto: Sagarunsten01@gmail.com">Sagarunsten01@gmail.com</a> </p>
         </div>
       </div>
 
       <div class="small-card-container">
         <div class="small-card-wrapper">
-            <img src="./WebAssets/images/felix.png" alt="empty">
-            <p>  Title here! </p>
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi quia commodi dolorem. </p>
-            <p> *Hello there </p>
+            <img src="./WebAssets/images/default-avatar.webp" alt="Tawan">
+            <p> Tawan Hjulgren, Game Artist. </p>
+            <p> Utvecklat grundidén, sammanställt 3D modeller, färg och ljus, samt placerat dem i en miljö. </p>
         </div>
 
         <div class="small-card-wrapper">
-            <img src="./WebAssets/images/felix.png" alt="empty">
-            <p>  Title here! </p>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            <p> *Hello there </p>
+            <img src="./WebAssets/images/jonas.webp" alt="Jonas">
+            <p> Jonas Johansson, UX Designer </p>
+            <p> Ansvarat tillsammans med Emelie för inledande idégenereringsformat, process och schema. Tagit fram intervjufrågor till yrkeskunnig person inom området
+              Komponerat bakgrundsmusik och assisterat i Art Direction samt viss 3D-modellering. </p>
+            <p> <a href = "mailto: jonjoh0527@skola.goteborg.se">jonjoh0527@skola.goteborg.se</a></p>
         </div>
 
         <div class="small-card-wrapper">
-            <img src="./WebAssets/images/felix.png" alt="empty">
-            <p>  Title here! </p>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa delectus iusto asperiores nihil vel quibusdam dolores cumque? </p>
+            <img src="./WebAssets/images/emelie.webp" alt="Emelie">
+            <p> Emelie Jonsson, UX Designer </p>
+            <p> Ansvarat tillsammans med Jonas för inledande idégenereringsformat och process. Ansvarat för en Intervju med en yrkeskunnig person inom området. Deltagit i skapandet av berättelsen och designen. </p>
+            <p> <a href = "mailto: emejon0314@skola.goteborg.se">emejon0314@skola.goteborg.se</a> </p>
         </div>
       </div>
   </section>
@@ -153,11 +155,11 @@
   </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/our-home-build.loader.js";
+      var loaderUrl = buildUrl + "/ourhome-build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/our-home-build.data",
-        frameworkUrl: buildUrl + "/our-home-build.framework.js",
-        codeUrl: buildUrl + "/our-home-build.wasm",
+        dataUrl: buildUrl + "/ourhome-build.data",
+        frameworkUrl: buildUrl + "/ourhome-build.framework.js",
+        codeUrl: buildUrl + "/ourhome-build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Sammanslaget22",
