Add footer & update styling

--- a/gamebuild/index.html
+++ b/gamebuild/index.html
@@ -75,7 +75,7 @@
 
     <section class="donate" id="donate">
       <h2>Ge en gåva - Bli månadsgivare </h2>
-      <p>Som månadsgivare till Räddningsmissionen stöttar du barn och vuxna i utsatta livssituationer, både med akuta insatser och långsiktiga projekt. Regelbundna gåvor via autogiro innebär att administrationen minskas och att en större del av varje gåva kan gå direkt till vårt arbete bland utsatta och hemlösa.</p>
+      <p>Som månadsgivare bidrar du till att säkra vårt långsiktiga arbete bland utsatta människor. Ett månadsgivande är dessutom det smidigaste sättet att stödja Räddningsmissionen. Regelbundna gåvor via autogiro innebär att administrationen minskas och att en ännu större del av varje gåva kan gå direkt till vårt arbete.</p>
       <button>Ge din gåva 💕</button>
     </section>
 
@@ -88,12 +88,13 @@
           <img src="./WebAssets/images/jimmy.webp" alt="Jimmy">
           <p> Jimmy Saarela, Game Programmer </p>
           <p> Jag har tagit ansvar för implementeringen av interaktioner, kamera, samt uppbyggnad av 3D miljö. </p>
+          <p><a href = "mailto: jimmysaarela@gmail.com">jimmysaarela@gmail.com</a></p>
         </div>
 
         <div class="small-card-wrapper">
             <img src="./WebAssets/images/felix.png" alt="Felix">
             <p> Felix Östergren, Webbutvecklare </p>
-            <p> Ansvarat för webbsidan och dess design, deployment, och Unity WebGL builds. Hjälpt grundidén</p>
+            <p> Ansvarat för webbsidan och dess design, deployment, och Unity WebGL builds. Hjälpt utveckla grundidén</p>
             <p> <a href = "mailto: hello@felixgren.com">hello@felixgren.com</a> </p>
         </div>
 
@@ -107,15 +108,16 @@
 
       <div class="small-card-container">
         <div class="small-card-wrapper">
-            <img src="./WebAssets/images/default-avatar.webp" alt="Tawan">
+            <img src="./WebAssets/images/tawan.webp" alt="Tawan">
             <p> Tawan Hjulgren, Game Artist. </p>
             <p> Utvecklat grundidén, sammanställt 3D modeller, färg och ljus, samt placerat dem i en miljö. </p>
+            <p> <a href = "mailto: Tawan.hjulgren@gmail.com">jimmysaarela@gmail.com</a> </p>
         </div>
 
         <div class="small-card-wrapper">
             <img src="./WebAssets/images/jonas.webp" alt="Jonas">
             <p> Jonas Johansson, UX Designer </p>
-            <p> Ansvarat tillsammans med Emelie för inledande idégenereringsformat, process och schema. Tagit fram intervjufrågor till yrkeskunnig person inom området
+            <p> Ansvarat med Emelie för inledande idégenereringsformat, process och schema. Tagit fram intervjufrågor till yrkeskunnig person inom området
               Komponerat bakgrundsmusik och assisterat i Art Direction samt viss 3D-modellering. </p>
             <p> <a href = "mailto: jonjoh0527@skola.goteborg.se">jonjoh0527@skola.goteborg.se</a></p>
         </div>
@@ -135,6 +137,60 @@
     <button>Bli volontär 🙏</button>
   </section>
 
+      <!-- Footer content -->
+      <footer>
+        <h2 class="logo">
+          OUR HOME
+        </h2>
+  
+        <div class="social">
+          <a href="https://github.com/felixgren" target="_blank">
+            <object
+              data="WebAssets/svg/github-social.svg"
+              type="image/svg+xml"
+            ></object>
+          </a>
+          <a href="https://youtu.be/6o8zGVCVCWk" target="_blank">
+            <object
+              data="WebAssets/svg/fb-social.svg"
+              type="image/svg+xml"
+            ></object>
+          </a>
+          <a
+            href="https://www.instagram.com/yrgo_webbutvecklare/"
+            target="_blank"
+          >
+            <object
+              data="WebAssets/svg/ig-social.svg"
+              type="image/svg+xml"
+            ></object>
+          </a>
+        </div>
+  
+        <div class="footer-items">
+          <div class="footer-contact">
+            <a href="tel:+4670000000">+4670000000</a>
+            <a href="mailto:hello@friend.com">hello@yrgonauterna.se</a>
+            <p>Lindholmen 1</p>
+            <p>Göteborg</p>
+          </div>
+          <div class="copy"><p>Vårt hem &copy; 2021 Copyright LOLOLOL</p></div>
+          <div class="footer-company">
+            <a
+              href="https://www.yrgo.se/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Yrgonaut Co.</a
+            >
+            <a
+              href="https://www.yrgo.se/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >YRGO</a
+            >
+          </div>
+        </div>
+      </footer>
 
   <div id="unity-container" class="unity-desktop">
     <canvas id="unity-canvas" width=960 height=600></canvas>
