--- a/gamebuild/index.html
+++ b/gamebuild/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Vårt hem</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="stylesheet" href="WebAssets/style.css">
     <!-- Dosis font-->
@@ -15,7 +14,7 @@
     />
     <link
       rel="shortcut icon"
-      href="/assets/images/logo.png"
+      href="WebAssets/images/favicon.png"
       type="image/x-icon"
     />
     <script defer data-domain="sammanslaget.vercel.app" src="https://plausible.io/js/plausible.js"></script>
