--- a/gamebuild/index.html
+++ b/gamebuild/index.html
@@ -75,7 +75,7 @@
     <section class="donate" id="donate">
       <h2>Ge en gåva - Bli månadsgivare </h2>
       <p>Som månadsgivare bidrar du till att säkra vårt långsiktiga arbete bland utsatta människor. Ett månadsgivande är dessutom det smidigaste sättet att stödja Räddningsmissionen. Regelbundna gåvor via autogiro innebär att administrationen minskas och att en ännu större del av varje gåva kan gå direkt till vårt arbete.</p>
-      <button>Ge din gåva 💕</button>
+      <button><a href="https://raddningsmissionen.se/gava">Ge din gåva 💕</a></button>
     </section>
 
      <!-- Info content -->
@@ -93,7 +93,7 @@
         <div class="small-card-wrapper">
             <img src="./WebAssets/images/felix.png" alt="Felix">
             <p> Felix Östergren, Webbutvecklare </p>
-            <p> Ansvarat för webbsidan och dess design, deployment, och Unity WebGL builds. Hjälpt utveckla grundidén</p>
+            <p> Ansvarat för webbsidan och dess design, deployment, och Unity WebGL builds.</p>
             <p> <a href = "mailto: hello@felixgren.com">hello@felixgren.com</a> </p>
         </div>
 
@@ -133,7 +133,7 @@
   <section class="volunteer" id="volunteer">
     <h2>Följ med på vår resa - Bli volontär </h2>
     <p>Har du möjlighet att ta ett volontäruppdrag? Vi finns över hela Sverige för att hjälpa människor i behov. Pandemin har fört med sig att många av våra redan engagerade volontärer inte kan utföra sina uppdrag som vanligt. Därför behövs du extra mycket just nu – både i våra vanliga verksamheter och i de krisinsatser vi gör för att avlasta samhället i coronakrisen.</p>
-    <button>Bli volontär 🙏</button>
+    <button><a href="https://raddningsmissionen.se/engagera-dig">Bli volontär 🙏</a></button>
   </section>
 
       <!-- Footer content -->
